# dejavu

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
.claude/commands/: dejavu-plan.md  dejavu-refresh.md
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  DEVELOPING.md  RELEASING.md
packaging/: dejavu.rb
src/dejavu/: __init__.py  cli.py  mcp.py  preflight.py  safety.py  scope.py  search.py  store.py
src/dejavu/assets/: __init__.py  config.toml  dejavu-triggers.md
src/dejavu/assets/commands/: dejavu-save-context.md
tests/: conftest.py  test_install_mcp.py  test_mcp.py  test_resume.py  test_search_ja.py  test_store.py  test_worktree.py
